# ModernCPP

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
include/: ErrorCode.h  Math.h
src/: CMakeLists.txt  main.cpp
src/math/: CMakeLists.txt  math.cpp
test/: CMakeLists.txt  math.cpp
